# 10-RBAC-Management-ExpressOpenApi-NLayer/rbacmanagement-microservice/api/repositories/endpoint/mongo.endpoint.js
@@ -1,0 +1,20 @@
+// mongo.endpoint.js
+
+const mongoose = require('mongoose');
+const mongooseHidden = require('mongoose-hidden')();
+
+const endpointSchema = new mongoose.Schema({
+  id: String,
+  name: String,
+  description: String,
+  url: String,
+  urlregex: String,
+});
+
+endpointSchema.plugin(mongooseHidden); // to hidden _id and __v in query results
+
+const Endpoint = mongoose.model('Endpoint', endpointSchema);
+
+module.exports = {
+  Endpoint,
+};
