# 10-RBAC-Management-ExpressOpenApi-NLayer/rbacmanagement-microservice/api/repositories/role/mongo.role.js
@@ -1,0 +1,18 @@
+// mongo.role.js
+
+const mongoose = require('mongoose');
+const mongooseHidden = require('mongoose-hidden')();
+
+const roleSchema = new mongoose.Schema({
+  id: String,
+  name: String,
+  endpoints: [String],
+});
+
+roleSchema.plugin(mongooseHidden); // to hidden _id and __v in query results
+
+const Role = mongoose.model('Role', roleSchema);
+
+module.exports = {
+  Role,
+};
